# Medi

./: preprocess.py  pyproject.toml  test.ipynb  train.py  utilities.py
models/: best_metric_model.pth  loss_test.npy  loss_train.npy  metric_test.npy  metric_train.npy
tuberculosis/: tb_dataset.py
tuberculosis/backup_20250713_025658/: README.md  TBX11K_SETUP.md  __init__.py  cleanup_files.py  cli.py  main.py  setup.py  setup.sh  setup_tbx11k.py  tb_analyze.py  tb_detect.py  tb_detect_bbox.py  tb_detection.py  tb_detection_test.ipynb  tb_preprocess.py  tb_setup.py  tb_test.ipynb  tb_train.py  tb_train_detector.py  tb_utilities.py
tuberculosis/backup_20250713_183155/: cleanup_files.py  tb_detection_comparison.ipynb
