[project]
name = "medi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "monai>=1.5.0",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.0",
    "torch>=2.0",
    "tqdm>=4.67.1",
]
